--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
-    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "phosphor-svelte": "^2.0.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.2.6",
